fixed background css so there is no more white space when resizing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,9 +5,23 @@
 
 body{
   background-image: url("media/mountain.jpg");
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
+  -webkit-background-size: contain;
+  -moz-background-size: 100%;
   -o-background-size: cover;
   background-size: 100%;
+  background-attachment: fixed;
+}
+
+@media(max-width: 950px){
+  body{
+    -webkit-background-size: cover;
+  }
+}
+
+@media(min-height: 780px){
+  body{
+    -webkit-background-size: cover;
+  }
+ 
+
 }
